--- a/SignInWithGoogle/app/src/main/res/layout/activity_fragment_recommend.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_fragment_recommend.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".fragment_Recommend">
+    tools:context=".Reccommend">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -128,5 +128,17 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+
+    <!-- 소윤소윤 : 요기 플로팅 버튼 부분 이모티콘 바꿔주세요~~~~~~-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addRecom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="26dp"
+        android:src="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
