--- a/SignInWithGoogle/app/src/main/res/layout/recommend_item.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/recommend_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.ahn.signinwithgoogle.fragment_Recommend"
+    tools:context="com.example.ahn.signinwithgoogle.Reccommend"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:orientation="horizontal"
