--- a/SignInWithGoogle/app/src/main/res/layout/activity_add_plan.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_add_plan.xml
@@ -10,18 +10,17 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:layout_weight="3.5">
+        android:layout_weight="2">
 
         <EditText
             android:id="@+id/plan_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#62ffffff"
-            android:drawableLeft="@drawable/test"
+            android:drawableLeft="@drawable/resize_plan"
             android:hint="   Write your new Travel name"
             android:padding="5dp"
             android:textColorHint="#000000" />
@@ -62,11 +61,13 @@
         <Button
             android:id="@+id/createBtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="58dp"
             android:layout_below="@+id/end_date"
             android:layout_marginTop="8dp"
             android:padding="5dp"
-            android:text="Create New Plan!" />
+            android:textSize="20sp"
+            android:text="Create New Plan!"
+            android:background="#62ffffff" />
 
     </RelativeLayout>
 
@@ -75,24 +76,38 @@
         android:layout_height="0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_weight="6.5"
-        android:background="@drawable/border">
+        android:layout_weight="3.5"
+        android:background="@drawable/addplan_border">
 
         <ListView
             android:id="@+id/planListview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:layout_weight="2"
+            android:layout_height="340dp"
+            android:layout_marginBottom="16dp"
             android:choiceMode="multipleChoice"
-            android:divider="#FFCCCC"
+            android:divider="#f6d289"
             android:dividerHeight="2dp"
-            android:listSelector="#add599ff"
+            android:listSelector="#d2eda764"
             android:longClickable="true">
+
         </ListView>
     </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="right"
+            android:layout_marginEnd="21dp"
+            android:src="@drawable/boat" />
+    </RelativeLayout>
 
 </LinearLayout>
