--- a/SignInWithGoogle/app/src/main/res/layout/recommend_item.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/recommend_item.xml
@@ -25,6 +25,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:gravity="center_vertical"
+        android:fontFamily="@font/enjoy"
         android:background="#ffffff"
         android:padding="3dp" />
     <TextView
@@ -35,6 +36,7 @@
         android:text="@string/info"
         android:gravity="center_vertical"
         android:layout_marginTop="2dp"
+        android:fontFamily="@font/enjoy"
         android:background="#ffffff"
         android:padding="3dp" />
 </LinearLayout>
