--- a/SignInWithGoogle/app/src/main/res/drawable/addplan_border.xml
+++ b/SignInWithGoogle/app/src/main/res/drawable/addplan_border.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#f2bd4a" />
+            <solid android:color="#8affffff" />
         </shape>
     </item>
     <item
@@ -10,7 +10,7 @@
         android:bottom="3dp">
 
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="#91ffffff" />
         </shape>
     </item>
 
