--- a/SignInWithGoogle/app/src/main/res/layout/activity_main.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/loginpage"
     android:orientation="vertical"
     android:weightSum="4">
 
@@ -14,26 +15,18 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <ImageView
-
-            android:id="@+id/google_icon"
-            android:contentDescription="@string/desc_firebase_lockup"
-            android:src="@drawable/ic_launcher_background"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="@string/google_title_text"
-             />
+            android:text="@string/google_title_text" />
 
         <TextView
             android:id="@+id/status"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@string/signed_out" />
 
         <TextView
@@ -75,8 +68,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#6cffffff"
+                android:fontFamily="@font/enjoy"
                 android:text="@string/sign_out"
-                 />
+                android:textColor="#000000"
+                android:layout_marginRight="8dp"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/disconnect_button"
@@ -84,8 +81,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#6cffffff"
+                android:fontFamily="@font/enjoy"
                 android:text="@string/disconnect"
-                 />
+                android:textColor="#000000"
+                android:textSize="20sp" />
         </LinearLayout>
 
     </RelativeLayout>
