--- a/SignInWithGoogle/app/src/main/res/layout/list_header.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/list_header.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="#cab6ef">
+    android:background="#b6d49d">
 
     <TextView
         android:id="@+id/date_list"
@@ -14,6 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:text="소윤이"
+        android:fontFamily="@font/enjoy"
         android:textSize="25dp" />
 
     <Button
