--- a/SignInWithGoogle/app/src/main/res/layout/plan_item.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/plan_item.xml
@@ -3,26 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="3dp"
     android:background="#dddddd"
-    android:weightSum="10">
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="7"
-        android:orientation="vertical"
-        android:weightSum="5">
+    android:weightSum="5">
+
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:text="My Journey"
-        android:textSize="18sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:gravity="center_vertical"
         android:background="#ffffff"
+        android:fontFamily="@font/enjoy"
         android:padding="3dp"/>
     <TextView
         android:layout_width="match_parent"
@@ -32,18 +28,9 @@
         android:text="yyyy-mm-dd ~ yyyy-mm-dd"
         android:gravity="center_vertical"
         android:layout_marginTop="2dp"
+        android:fontFamily="@font/enjoy"
+        android:textSize="20sp"
         android:background="#ffffff"
         android:padding="3dp"
         />
     </LinearLayout>
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_weight="3"
-        android:background="#ffffff"
-        android:layout_marginLeft="3dp"
-        android:clickable="true"
-        android:id="@+id/delete"
-        android:src="@drawable/bin" />
-
-</LinearLayout>
