--- a/SignInWithGoogle/app/src/main/res/layout/list_header.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/list_header.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:text="소윤이"
+        android:textStyle="bold"
         android:fontFamily="@font/enjoy"
         android:textSize="25dp" />
 
