--- a/SignInWithGoogle/app/src/main/res/layout/activity_home.xml
+++ b/SignInWithGoogle/app/src/main/res/layout/activity_home.xml
@@ -49,7 +49,8 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_marginBottom="8dp"
-                    android:background="#88f1acac"
+                    android:background="#1a4a83"
+                    android:textColor="#ffffff"
                     android:fontFamily="@font/enjoy"
                     android:scaleType="centerInside"
                     android:src="@drawable/addplan"
@@ -64,7 +65,8 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_marginBottom="8dp"
-                    android:background="#88f1acac"
+                    android:background="#1a4a83"
+                    android:textColor="#ffffff"
                     android:fontFamily="@font/enjoy"
                     android:scaleType="centerInside"
                     android:src="@drawable/recommend"
@@ -80,7 +82,8 @@
                     android:layout_width="160dp"
                     android:layout_height="60dp"
                     android:layout_marginBottom="8dp"
-                    android:background="#88f1acac"
+                    android:background="#1a4a83"
+                    android:textColor="#ffffff"
                     android:fontFamily="@font/enjoy"
                     android:scaleType="centerInside"
                     android:src="@drawable/check"
@@ -94,7 +97,8 @@
                     android:id="@+id/settingBtn"
                     android:layout_width="160dp"
                     android:layout_height="60dp"
-                    android:background="#88f1acac"
+                    android:background="#1a4a83"
+                    android:textColor="#ffffff"
                     android:fontFamily="@font/enjoy"
                     android:scaleType="centerInside"
                     android:src="@drawable/setting"
